# bluecore_api

./: .dockerignore  .eslintrc.yml  .gitignore  .prettierignore  Dockerfile  Dockerfile-dev  Dockerfile-setup  Dockerfile-setup-cypress  README.md  alembic.ini  babel.config.json  compose-dev.yaml  compose.yml  copyResources.js  docker-compose.yml  jest.envVars.js  jest.helpers.js  openapi.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  start-dev.sh  start.sh
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: dependency-updates.yml  publish.yml  stack-integration.yml  test.yml
__tests__/: app.test.js  aws.marc.test.js  aws.test.js  docdb.test.js  error.test.js  mongodb.test.js  rdf.test.js  server.test.js
__tests__/__fixtures__/: all_resp.json  metadata_6852a770-2961-4836-a833-0b21a9b68041.json  page_one_resp.json  req_6852a770-2961-4836-a833-0b21a9b68041.json  resource_63834c19-4d01-4c91-9dcc-a69c6e26c886.json  resource_6852a770-2961-4836-a833-0b21a9b68041.json  resource_ref_results.json  resource_refs_resp.json  resp_6852a770-2961-4836-a833-0b21a9b68041.json
__tests__/endpoints/: groups.test.js  helpers.test.js  marcGet.test.js  marcPost.test.js  metrics.test.js  resourceDelete.test.js  resourceGet.test.js  resourcePost.test.js  resourcePut.test.js  resources.test.js  resourcesGet.test.js  resourcesPost.test.js  resourcesPut.test.js  (+4 more)
bluecore_store_migrations/: env.py
docs/: index.html
keycloak-export/: bluecore-realm.json
nginx/: bluecore.conf  index.html
sample/: batch-small.jsonld
scripts/: cbd_to_jsonld.py  init-multi-postgres-dbs.sh
setup/: init-mongo-cypress.sh  init-mongo.sh  rt_literal_property_attrs_doc.json  rt_lookup_property_attrs_doc.json  rt_property_template_doc.json  rt_resource_property_attrs_doc.json  rt_resource_template_doc.json  rt_uri_doc.json  rt_uri_property_attrs_doc.json
src/: app.js  aws.js  bibframe.js  error.js  honeybadger.js  jwt.js  mongo.js  permissions.js  rdf.js  server.js
tests/: 23807141.jsonld  app.test.js  aws.cognito.test.js  aws.comprehend.test.js  aws.sqs.test.js  blue-core-hub.jsonld  blue-core-other-resources.json  blue-core-other-resources2.json  blue-core-triple-embeddings.json  blue-core-work.jsonld  cbd-instance2.jsonld  cbd-work.jsonld  conftest.py  error.test.js  test_models.py
utilities/: mongo.js  rdf.js
(+149 files in other folders)
