[project]
name = "bluecore-api"
version = "0.1.0"
description = "Blue Core API for managing BIBFRAME RDF data and workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]",
  "sqlalchemy",
  "pgvector",
  "psycopg2-binary>=2.9.10",
  "rdflib>=7.1.3",
  "bluecore-models>=0.5.1",
  "python-multipart>=0.0.20",
  "fastapi-keycloak-middleware>=1.2.0",
]

[dependency-groups]
dev = [
  "ruff>=0.11.6",
  "pytest>=8.3.4",
  "pytest-mock-resources[docker]>=2.12.1",
  "pytest-mock>=3.14.0",
  "pytest-httpx>=0.35.0",
  "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bluecore_api"]
