[project]
name = "bluecore-api"
version = "0.7.2"
description = "Blue Core API for managing BIBFRAME RDF data and workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]",
  "sqlalchemy",
  "pgvector",
  "psycopg2-binary>=2.9.10",
  "rdflib>=7.1.3",
  "bluecore-models",
  "python-multipart>=0.0.20",
  "fastapi-keycloak-middleware>=1.2.0",
  "typer>=0.15.4",
  "python-dotenv>=1.1.0",
  "pymilvus>=2.5.14",
]

[project.scripts]
bluecore = "bluecore_api.cli:app"

[dependency-groups]
dev = [
  "ruff>=0.11.6",
  "pytest>=8.3.4",
  "pytest-mock-resources[docker]>=2.12.1",
  "pytest-mock>=3.14.0",
  "pytest-httpx>=0.35.0",
  "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluecore_api"]
